<resources>
    <string name="app_name">Mona Lisa</string>
    <string name="txt_set_bluetooth">蓝牙设置</string>
    <string name="btn_open_bluetooth">打开蓝牙</string>
    <string name="btn_search_device">搜索蓝牙设备</string>
    <string name="btn_start_search">开始搜索</string>
    <string name="txt_searching">搜索中,请等待...</string>
    <string name="txt_searched">搜索完毕</string>


    <string name="btn_blth_connect">连接设备</string>
    <string name="btn_blth_visiblity">设置蓝牙可见性</string>
    <string name="btn_blth_disconnect">断开连接</string>
    <string name="connect_state">状态</string>
    <string name="progress_scaning">正在扫描</string>
    <string name="progress_connecting">正在连接</string>
    <string name="send">发送</string>
    <string name="write_tip">发送数据给设备</string>
    <string name="bluetooth_unopened">蓝牙未开启，请先开启蓝牙</string>
</resources>
