<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_bluetooth_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gavin.bluetooth.Communication">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_blth_visiblity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_warning_selector"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/btn_blth_visiblity"/>
        <Button
            android:id="@+id/btn_blth_disconnect"
            android:background="@drawable/btn_primary_selector"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_blth_disconnect"/>
        <TextView
            android:id="@+id/tv_connect_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/connect_state"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="3"
                android:hint="@string/write_tip"
                android:layout_gravity="bottom"
                android:textColor="#ccc"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_sendmessage"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_primary_selector"
                android:textColor="#fff"
                android:textSize="14sp"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>
